--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -64,6 +64,8 @@
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="{% static 'assets/js/config.js' %}"></script>
     <script src="{% static 'libs/vue/vue.global.js' %}"></script>
+    <script src="{% static 'libs/axios/axios.min.js' %}"></script>
+    <script src="{% static 'libs/sweetalert/sweetalert.js' %}"></script>
   </head>
 
   <body>
@@ -632,7 +634,7 @@
     <!-- build:js assets/vendor/js/core.js -->
     <script>
       document.getElementById('c').innerHTML = `© ${new Date().getFullYear()} , made with ❤️ by`
-      
+
     </script>
     <script src="{% static 'assets/vendor/libs/jquery/jquery.js' %}"></script>
     <script src="{% static 'assets/vendor/libs/popper/popper.js' %}"></script>
