--- a/templates/base.html
+++ b/templates/base.html
@@ -64,6 +64,7 @@
     <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
     <script src="{% static 'assets/js/config.js' %}"></script>
     <script src="{% static 'libs/vue/vue.global.js' %}"></script>
+    <script src="{% static 'libs/axios/axios.min.js' %}"></script>
   </head>
 
   <body>
