--- a/templates/auth/register.html
+++ b/templates/auth/register.html
@@ -49,7 +49,6 @@
     <link rel="stylesheet" href="{% static 'assets/vendor/css/core.css' %}" class="template-customizer-core-css" />
     <link rel="stylesheet" href="{% static 'assets/vendor/css/theme-default.css' %}" class="template-customizer-theme-css" />
     <link rel="stylesheet" href="{% static 'assets/css/demo.css' %}" />
-
     <!-- Vendors CSS -->
     <link rel="stylesheet" href="{% static 'assets/vendor/libs/perfect-scrollbar/perfect-scrollbar.css' %}" />
 
@@ -71,10 +70,37 @@
   <body>
     <!-- Content -->
     <script>
-      
+
     </script>
 
-    <div class="container-xxl">
+    <div class="container-xxl" id="app">
+        <!-- Button trigger modal -->
+        <button type="button" ref="privacyAllow" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#privacy" hidden>
+            Launch demo modal
+        </button>
+        
+        <!-- Modal -->
+        <div class="modal fade" id="privacy" tabindex="-1" aria-labelledby="privacyLabel" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="privacyLabel">Modal title</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                    
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" @click="(isAllow = false)" class="btn btn-secondary" data-bs-dismiss="modal">Deny</button>
+                        <button type="button" @click="(isAllow = true)" class="btn btn-primary" data-bs-dismiss="modal">Allow</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
       <div class="authentication-wrapper authentication-basic container-p-y">
         <div class="authentication-inner">
           <!-- Register Card -->
@@ -145,21 +171,22 @@
               <h4 class="mb-2">Adventure starts here 🚀</h4>
               <p class="mb-4">Make your app management easy and fun!</p>
 
-              <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
+              <form id="formAuthentication" class="mb-3" >
                 <div class="mb-3">
                   <label for="username" class="form-label">Username</label>
                   <input
                     type="text"
                     class="form-control"
                     id="username"
-                    name="username"
                     placeholder="Enter your username"
+                    v-model="username"
+                    :class="{'is-invalid':!username_isValid}"
                     autofocus
                   />
                 </div>
                 <div class="mb-3">
-                  <label for="email" class="form-label">Email</label>
-                  <input type="text" class="form-control" id="email" name="email" placeholder="Enter your email" />
+                  <label for="email"  class="form-label">Email</label>
+                  <input type="text" :class="{'is-invalid':!email_isValid}" class="form-control" id="email"  v-model="email" placeholder="Enter your email" />
                 </div>
                 <div class="mb-3 form-password-toggle">
                   <label class="form-label" for="password">Password</label>
@@ -168,7 +195,8 @@
                       type="password"
                       id="password"
                       class="form-control"
-                      name="password"
+                      :class="{'is-invalid':!password_isValid}"
+                      v-model="password"
                       placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
                       aria-describedby="password"
                     />
@@ -178,15 +206,17 @@
 
                 <div class="mb-3">
                   <div class="form-check">
-                    <input class="form-check-input" type="checkbox" id="terms-conditions" name="terms" />
+                    <input class="form-check-input" :class="{'is-invalid':!isAllowed}" v-model="isAllow" @change="this.$refs['privacyAllow'].click()" type="checkbox" id="terms-conditions" name="terms" />
                     <label class="form-check-label" for="terms-conditions">
                       I agree to
-                      <a href="javascript:void(0);">privacy policy & terms</a>
+                      <a href="javascript:void(0);" @click="this.$refs['privacyAllow'].click()" >privacy policy & terms</a>
                     </label>
                   </div>
                 </div>
-                <button class="btn btn-primary d-grid w-100 mb-3">Sign up</button>
-                <button class="btn btn-outline-primary d-grid w-100">Google</button>
+                <button class="btn btn-primary d-grid w-100 mb-3" @click="onSubmit($event)">Sign up</button>
+                <button class="btn btn-outline-primary d-grid w-100 fw-bold">
+                    <span><i class='bx-fw bx bxl-google'></i>Google</span>
+                </button>
               </form>
 
               <p class="text-center">
@@ -201,6 +231,107 @@
         </div>
       </div>
     </div>
+    <script>
+        const { createApp } = Vue;
+        createApp(
+            {
+                delimiters: ["[{", "}]"],
+                data() {
+                    return {
+                        username: "",
+                        password: "",
+                        email: "",
+
+                        username_isValid: true,
+                        password_isValid: true,
+                        email_isValid: true,
+                        isValid: true,
+                        on_alt: false,
+                        alt_msg: "",
+
+                        isAllow: false,
+                        isAllowed: true
+                    };
+                },
+                mounted() {
+
+                },
+                methods: {
+                    PrivacyAllow() {
+
+                    },
+
+
+                    onSubmit(e) {
+                        e.preventDefault();
+
+                        this.isValid = true;
+
+                        this.username_isValid = true;
+                        if (this.username === "") {
+                            this.username_isValid = false;
+                            this.isValid = false;
+
+                        }
+                        this.password_isValid = true;
+                        if (this.password === "") {
+                            this.password_isValid = false;
+                            this.isValid = false;
+                        }
+                        this.email_isValid = true;
+                        if (this.email === "") {
+                            this.email_isValid = false;
+                            this.isValid = false;
+                        }
+
+                        if (!this.isAllow) {
+                            this.isAllowed = false;
+                        }
+                        else {
+                            this.isAllowed = true;
+                        }
+
+                        if (this.isValid) {
+                            const form_data = new FormData;
+                            form_data.append("csrfmiddlewaretoken", "{{ csrf_token }}")
+                            form_data.append("username", this.username);
+                            form_data.append("password", this.password);
+                            form_data.append("email", this.email);
+
+                            axios(
+                                {
+                                    method: "post",
+                                    url: "{% url 'login-api' %}",
+                                    data: form_data
+                                }
+                            ).then((response) => {
+                                console.log(response)
+                                if (true) {
+                                    Swal.fire({
+                                        title: "The Internet?",
+                                        text: "That thing is still around?",
+                                        icon: "question"
+                                    });
+                                }
+                                else {
+                                    Swal.fire({
+                                        title: "The Internet?",
+                                        text: "That thing is still around?",
+                                        icon: "danger"
+                                    });
+                                }
+                            });
+                        }
+
+
+
+
+                    },
+                }
+
+            }
+        ).mount('#app')
+    </script>
 
     <!-- / Content -->
 
